# FANMODPlus

./: .gitignore  CMakeLists.txt  CMakePresets.json  Compile.md  Dockerfile  Makefile  README.md  cmake_install.cmake  graph64.cpp  main.cpp  maingraph.cpp  output.cpp
doc/: compile.rst
helpers/: CMakeLists.txt  Makefile  cmake_install.cmake  getopt.c
include/: EdgeContainer.hpp  Makefile  cmake_install.cmake  graph64.hpp  hashmap.h  maingraph.hpp  nausparse.h  nautinv.h  naututil.h  nauty.h  nautyinit.h  output.hpp  schreier.h
nauty/: CMakeLists.txt  Makefile  cmake_install.cmake  naugraph.c  nausparse.c  nautil.c  nautinv.c  naututil.c  nauty.c  schreier.c
w_include/: CMakeLists.txt  getopt.h  unistd.h
